tests/snapshots/test_meta__parse_meta_name_value_with_keyword-2.snap
---
created: "2019-04-06T05:46:03.504660549Z"
creator: insta@0.7.4
source: tests/test_meta.rs
expression: syntax_tree
---
NameValue(
    MetaNameValue {
        ident: Ident(
            static,
        ),
        eq_token: Eq,
        lit: Int(
            LitInt {
                token: Literal {
                    lit: 5,
                },
            },
        ),
    },
)
