tests/snapshots/test_meta__parse_meta_name_value_with_keyword.snap
---
created: "2019-03-11T05:40:19.694905983Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
MetaNameValue {
    ident: Ident(
        static
    ),
    eq_token: Eq,
    lit: Int(
        LitInt {
            token: Literal {
                lit: 5
            }
        }
    )
}
