tests/snapshots/test_meta__parse_meta_name_value_with_path.snap
---
created: "2019-03-17T20:26:22.507948100Z"
creator: insta@0.7.1
source: tests/test_meta.rs
expression: syntax_tree
---
MetaNameValue {
    path: Path {
        leading_colon: None,
        segments: [
            PathSegment {
                ident: Ident(
                    foo
                ),
                arguments: None
            },
            Colon2,
            PathSegment {
                ident: Ident(
                    bar
                ),
                arguments: None
            }
        ]
    },
    eq_token: Eq,
    lit: Int(
        LitInt {
            token: Literal {
                lit: 5
            }
        }
    )
}
